# docs/swagger.json
@@ -268,6 +268,11 @@
         },
         "/triggers/test/api": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "This endpoint sends an API request with a **test payload** to a specified endpoint without saving it as a trigger.",
                 "consumes": [
                     "application/json"
@@ -317,6 +322,11 @@
         },
         "/triggers/test/scheduled": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "This endpoint allows users to test a scheduled event trigger **without saving it permanently**.",
                 "consumes": [
                     "application/json"
